fix: bold and italic colors

--- a/styles/less/nord.less
+++ b/styles/less/nord.less
@@ -6,6 +6,14 @@ body[class*='nord-ui'] {
   }
 
   .mde-preview {
+    strong {
+      color: rgba(255, 255, 255, 0.9);
+    }
+
+    em {
+      color: rgba(255, 255, 255, 0.7);
+    }
+
     a {
       background-color: transparent;
     }
